--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "Inktattoo",
       "path": "",
       "files": {
+        "49251524": {
+          "id": "49251524",
+          "path": "images/img-gallery-4.jpg",
+          "output": "images/img-gallery-4.jpg",
+          "name": "img-gallery-4.jpg",
+          "category": "IMAGE",
+          "size": 86310,
+          "type": "jpg",
+          "initialSize": 86310,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -268,6 +281,513 @@
             "2b9c5b12"
           ],
           "type": "sass"
+        },
+        "fee7b9e6": {
+          "id": "fee7b9e6",
+          "path": "images/header-photo.jpg",
+          "output": "images/header-photo.jpg",
+          "name": "header-photo.jpg",
+          "category": "IMAGE",
+          "size": 81421,
+          "type": "jpg",
+          "initialSize": 81421,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ac730b87": {
+          "id": "ac730b87",
+          "path": "images/ink-tattoo-logo.png",
+          "output": "images/ink-tattoo-logo.png",
+          "name": "ink-tattoo-logo.png",
+          "category": "IMAGE",
+          "size": 10164,
+          "type": "png",
+          "initialSize": 10164,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c62a594b": {
+          "id": "c62a594b",
+          "path": "images/img-studio-bg.jpg",
+          "output": "images/img-studio-bg.jpg",
+          "name": "img-studio-bg.jpg",
+          "category": "IMAGE",
+          "size": 381845,
+          "type": "jpg",
+          "initialSize": 381845,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "72837df1": {
+          "id": "72837df1",
+          "path": "images/tattoo-design.png",
+          "output": "images/tattoo-design.png",
+          "name": "tattoo-design.png",
+          "category": "IMAGE",
+          "size": 10536,
+          "type": "png",
+          "initialSize": 10536,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ea23bada": {
+          "id": "ea23bada",
+          "path": "images/img-aboutus-2.jpg",
+          "output": "images/img-aboutus-2.jpg",
+          "name": "img-aboutus-2.jpg",
+          "category": "IMAGE",
+          "size": 95556,
+          "type": "jpg",
+          "initialSize": 95556,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "42ef76b4": {
+          "id": "42ef76b4",
+          "path": "images/img-aboutus-1.jpg",
+          "output": "images/img-aboutus-1.jpg",
+          "name": "img-aboutus-1.jpg",
+          "category": "IMAGE",
+          "size": 108942,
+          "type": "jpg",
+          "initialSize": 108942,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "53fbf1b5": {
+          "id": "53fbf1b5",
+          "path": "images/img-aboutus-3.jpg",
+          "output": "images/img-aboutus-3.jpg",
+          "name": "img-aboutus-3.jpg",
+          "category": "IMAGE",
+          "size": 86763,
+          "type": "jpg",
+          "initialSize": 86763,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4ca94661": {
+          "id": "4ca94661",
+          "path": "images/img-aboutus-4.jpg",
+          "output": "images/img-aboutus-4.jpg",
+          "name": "img-aboutus-4.jpg",
+          "category": "IMAGE",
+          "size": 99637,
+          "type": "jpg",
+          "initialSize": 99637,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c428d23b": {
+          "id": "c428d23b",
+          "path": "images/img-aboutus-5.jpg",
+          "output": "images/img-aboutus-5.jpg",
+          "name": "img-aboutus-5.jpg",
+          "category": "IMAGE",
+          "size": 82895,
+          "type": "jpg",
+          "initialSize": 82895,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "16bee93d": {
+          "id": "16bee93d",
+          "path": "images/img-aboutus-6.jpg",
+          "output": "images/img-aboutus-6.jpg",
+          "name": "img-aboutus-6.jpg",
+          "category": "IMAGE",
+          "size": 79499,
+          "type": "jpg",
+          "initialSize": 79499,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "358e4f8a": {
+          "id": "358e4f8a",
+          "path": "images/img-aboutus-7.jpg",
+          "output": "images/img-aboutus-7.jpg",
+          "name": "img-aboutus-7.jpg",
+          "category": "IMAGE",
+          "size": 81027,
+          "type": "jpg",
+          "initialSize": 81027,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b2872191": {
+          "id": "b2872191",
+          "path": "images/img-aboutus-8.jpg",
+          "output": "images/img-aboutus-8.jpg",
+          "name": "img-aboutus-8.jpg",
+          "category": "IMAGE",
+          "size": 100404,
+          "type": "jpg",
+          "initialSize": 100404,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9e132e45": {
+          "id": "9e132e45",
+          "path": "images/img-aboutus-9.jpg",
+          "output": "images/img-aboutus-9.jpg",
+          "name": "img-aboutus-9.jpg",
+          "category": "IMAGE",
+          "size": 85333,
+          "type": "jpg",
+          "initialSize": 85333,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "90aa493d": {
+          "id": "90aa493d",
+          "path": "images/img-aboutus-10.jpg",
+          "output": "images/img-aboutus-10.jpg",
+          "name": "img-aboutus-10.jpg",
+          "category": "IMAGE",
+          "size": 101567,
+          "type": "jpg",
+          "initialSize": 101567,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "524e8ce8": {
+          "id": "524e8ce8",
+          "path": "images/img-aboutus-11.jpg",
+          "output": "images/img-aboutus-11.jpg",
+          "name": "img-aboutus-11.jpg",
+          "category": "IMAGE",
+          "size": 71801,
+          "type": "jpg",
+          "initialSize": 71801,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "03d06ac9": {
+          "id": "03d06ac9",
+          "path": "images/img-aboutus-12.jpg",
+          "output": "images/img-aboutus-12.jpg",
+          "name": "img-aboutus-12.jpg",
+          "category": "IMAGE",
+          "size": 91493,
+          "type": "jpg",
+          "initialSize": 91493,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b6074a42": {
+          "id": "b6074a42",
+          "path": "images/bg-testimorial.jpg",
+          "output": "images/bg-testimorial.jpg",
+          "name": "bg-testimorial.jpg",
+          "category": "IMAGE",
+          "size": 245831,
+          "type": "jpg",
+          "initialSize": 245831,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8d301395": {
+          "id": "8d301395",
+          "path": "images/bg-team.jpg",
+          "output": "images/bg-team.jpg",
+          "name": "bg-team.jpg",
+          "category": "IMAGE",
+          "size": 210153,
+          "type": "jpg",
+          "initialSize": 210153,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a38c999d": {
+          "id": "a38c999d",
+          "path": "images/team-member-1.jpg",
+          "output": "images/team-member-1.jpg",
+          "name": "team-member-1.jpg",
+          "category": "IMAGE",
+          "size": 268492,
+          "type": "jpg",
+          "initialSize": 268492,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6d97589f": {
+          "id": "6d97589f",
+          "path": "images/team-member-2.jpg",
+          "output": "images/team-member-2.jpg",
+          "name": "team-member-2.jpg",
+          "category": "IMAGE",
+          "size": 268555,
+          "type": "jpg",
+          "initialSize": 268555,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "69ed43f4": {
+          "id": "69ed43f4",
+          "path": "images/bg-twitter.jpg",
+          "output": "images/bg-twitter.jpg",
+          "name": "bg-twitter.jpg",
+          "category": "IMAGE",
+          "size": 273199,
+          "type": "jpg",
+          "initialSize": 273199,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4258bcdf": {
+          "id": "4258bcdf",
+          "path": "images/img-gallery-1.jpg",
+          "output": "images/img-gallery-1.jpg",
+          "name": "img-gallery-1.jpg",
+          "category": "IMAGE",
+          "size": 60108,
+          "type": "jpg",
+          "initialSize": 60108,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9f68b1d5": {
+          "id": "9f68b1d5",
+          "path": "images/img-gallery-2.jpg",
+          "output": "images/img-gallery-2.jpg",
+          "name": "img-gallery-2.jpg",
+          "category": "IMAGE",
+          "size": 90276,
+          "type": "jpg",
+          "initialSize": 90276,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "304cab29": {
+          "id": "304cab29",
+          "path": "images/img-gallery-3.jpg",
+          "output": "images/img-gallery-3.jpg",
+          "name": "img-gallery-3.jpg",
+          "category": "IMAGE",
+          "size": 56344,
+          "type": "jpg",
+          "initialSize": 56344,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29fc1772": {
+          "id": "29fc1772",
+          "path": "images/img-gallery-5.jpg",
+          "output": "images/img-gallery-5.jpg",
+          "name": "img-gallery-5.jpg",
+          "category": "IMAGE",
+          "size": 72560,
+          "type": "jpg",
+          "initialSize": 72560,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7c1f2faa": {
+          "id": "7c1f2faa",
+          "path": "images/img-gallery-6.jpg",
+          "output": "images/img-gallery-6.jpg",
+          "name": "img-gallery-6.jpg",
+          "category": "IMAGE",
+          "size": 57036,
+          "type": "jpg",
+          "initialSize": 57036,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6cb6a62f": {
+          "id": "6cb6a62f",
+          "path": "images/img-gallery-7.jpg",
+          "output": "images/img-gallery-7.jpg",
+          "name": "img-gallery-7.jpg",
+          "category": "IMAGE",
+          "size": 81798,
+          "type": "jpg",
+          "initialSize": 81798,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e37a2e06": {
+          "id": "e37a2e06",
+          "path": "images/img-gallery-8.jpg",
+          "output": "images/img-gallery-8.jpg",
+          "name": "img-gallery-8.jpg",
+          "category": "IMAGE",
+          "size": 80273,
+          "type": "jpg",
+          "initialSize": 80273,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eab1ef51": {
+          "id": "eab1ef51",
+          "path": "images/img-gallery-9.jpg",
+          "output": "images/img-gallery-9.jpg",
+          "name": "img-gallery-9.jpg",
+          "category": "IMAGE",
+          "size": 69602,
+          "type": "jpg",
+          "initialSize": 69602,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f6ea136b": {
+          "id": "f6ea136b",
+          "path": "images/img-gallery-10.jpg",
+          "output": "images/img-gallery-10.jpg",
+          "name": "img-gallery-10.jpg",
+          "category": "IMAGE",
+          "size": 63419,
+          "type": "jpg",
+          "initialSize": 63419,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2a30ad16": {
+          "id": "2a30ad16",
+          "path": "images/img-gallery-11.jpg",
+          "output": "images/img-gallery-11.jpg",
+          "name": "img-gallery-11.jpg",
+          "category": "IMAGE",
+          "size": 81241,
+          "type": "jpg",
+          "initialSize": 81241,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "70d67e45": {
+          "id": "70d67e45",
+          "path": "images/img-gallery-12.jpg",
+          "output": "images/img-gallery-12.jpg",
+          "name": "img-gallery-12.jpg",
+          "category": "IMAGE",
+          "size": 71579,
+          "type": "jpg",
+          "initialSize": 71579,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ce6ebcd1": {
+          "id": "ce6ebcd1",
+          "path": "images/img-gallery-13.jpg",
+          "output": "images/img-gallery-13.jpg",
+          "name": "img-gallery-13.jpg",
+          "category": "IMAGE",
+          "size": 78207,
+          "type": "jpg",
+          "initialSize": 78207,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2ae242d6": {
+          "id": "2ae242d6",
+          "path": "images/img-gallery-14.jpg",
+          "output": "images/img-gallery-14.jpg",
+          "name": "img-gallery-14.jpg",
+          "category": "IMAGE",
+          "size": 90275,
+          "type": "jpg",
+          "initialSize": 90275,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e3241a0": {
+          "id": "0e3241a0",
+          "path": "images/img-gallery-15.jpg",
+          "output": "images/img-gallery-15.jpg",
+          "name": "img-gallery-15.jpg",
+          "category": "IMAGE",
+          "size": 101817,
+          "type": "jpg",
+          "initialSize": 101817,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29452a8f": {
+          "id": "29452a8f",
+          "path": "images/img-gallery-16.jpg",
+          "output": "images/img-gallery-16.jpg",
+          "name": "img-gallery-16.jpg",
+          "category": "IMAGE",
+          "size": 93198,
+          "type": "jpg",
+          "initialSize": 93198,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "09b18c01": {
+          "id": "09b18c01",
+          "path": "images/img-gallery-17.jpg",
+          "output": "images/img-gallery-17.jpg",
+          "name": "img-gallery-17.jpg",
+          "category": "IMAGE",
+          "size": 127752,
+          "type": "jpg",
+          "initialSize": 127752,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4c3108ad": {
+          "id": "4c3108ad",
+          "path": "images/img-gallery-18.jpg",
+          "output": "images/img-gallery-18.jpg",
+          "name": "img-gallery-18.jpg",
+          "category": "IMAGE",
+          "size": 122583,
+          "type": "jpg",
+          "initialSize": 122583,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "64bf5e84": {
+          "id": "64bf5e84",
+          "path": "images/maps-icon.png",
+          "output": "images/maps-icon.png",
+          "name": "maps-icon.png",
+          "category": "IMAGE",
+          "size": 1308,
+          "type": "png",
+          "initialSize": 1308,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
